--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,7 +83,7 @@ a {
 
   .hero-section{
     background-color: #CFA6A61C;
-    height: 300px;
+   
 
   }
 
@@ -98,7 +98,7 @@ a {
 
   .hero-section .main{
     display : flex;
-    height :250px;
+    height :450px;
     align-items: center;
     justify-content: space-between;
     
@@ -126,10 +126,12 @@ a {
     background-color: #F98585;
     color : white;
     padding: 10px 20px;
+    border: none;
     box-shadow:#4141418A;
     font-weight : 500;
     cursor: pointer;
     font-size: 18px;
+    width: fit-content;
   }
 
   .recent-post .heading{
@@ -172,7 +174,7 @@ a {
   }
 
   .recent-post .main{
-    height: 400px;
+    height: 550px;
     display: flex;
     justify-content: center ;
     flex-direction: column;
